playing around with gridList

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,18 @@
   color: white;
 }
 
+.App-body{
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  justify-content: space-around;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 .App-link {
   color: #09d3ac;
 }
